--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,13 @@
 
     "react-icons": "^5.5.0",
 
-    "react-router-dom": "^7.6.3"
+    "react-markdown": "^10.1.0",
+
+    "react-router-dom": "^7.6.3",
+
+    "rehype-highlight": "^7.0.2",
+
+    "remark-gfm": "^4.0.1"
 
   },
 
