--- a/server/.env
+++ b/server/.env
@@ -4,6 +4,13 @@ NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=neo4j123
 NEO4J_DB=pagedbms
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=neo4j123
+NEO4J_DATABASE=homepage
+GEMINI_API_KEY=AIzaSyCEFCPmHbVrhsP5zTpPRo_xvVawKgUmaCE
+
+
 
 
 
